# 3bridge

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: CI.yaml
src/bridge/: bid.py  bidding.py  cards.py  conditions.py  hand.py  rules.py
src/scripts/: openings_stats.py
tests/: test_bidding.py  test_cards.py  test_conditions.py  test_empty.py  test_hand.py  test_rules.py
