[project]
name = "3bridge"
authors = [
    { name = "Krzysztof Kościuszkiewicz", email = "k.kosciuszkiewicz@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kkosciusz/3bridge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bridge/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.9"]
