[project]
name = "3bridge"
authors = [
    { name = "Krzysztof Kościuszkiewicz", email = "k.kosciuszkiewicz@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dynamic = [
    "version",
    "description"
]

[project.urls]
Home = "https://github.com/kkosciusz/3bridge"

[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bridge/__about__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/bridge"
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "hypothesis"
]

[tool.hatch.envs.test]
extra-dependencies = [
    "hypothesis",
    "watchdog[watchmedo]",
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[tool.hatch.envs.test.scripts]
test-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
test          = "test-coverage --no-cov"
autotest      = "watchmedo shell-command --patterns=*.py -R -D -W -q --command=pytest"

[[tool.hatch.envs.test.matrix]]
python = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13"
]

[tool.ruff]
line-length = 85

[tool.ruff.format]
quote-style = "preserve"
